--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vue": "^9.18.1",
     "prettier": "^3.1.0",
     "vite": "^5.0.0"
   }
