--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
     "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.5",
     "vite": "^5.0.0"
   }
 }
