--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.8"
+    "pinia": "^2.1.7",
+    "vue": "^3.3.8",
+    "vue-timer-hook": "^1.0.84"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
