--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.6.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.8",
     "vue-timer-hook": "^1.0.84"
@@ -23,6 +24,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-svg-loader": "^5.1.0"
   }
 }
