--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "pomodoro",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.3.8",
-    "vue-timer-hook": "^1.0.84"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vue": "^9.18.1",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0",
-    "vite-svg-loader": "^5.1.0"
-  }
+	"name": "pomodoro",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"pinia": "^2.1.7",
+		"pinia-plugin-persistedstate": "^3.2.1",
+		"vue": "^3.4.3",
+		"vue-timer-hook": "^1.0.84"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^4.5.0",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.53.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-vue": "^9.18.1",
+		"postcss": "^8.4.31",
+		"prettier": "^3.1.0",
+		"tailwindcss": "^3.3.5",
+		"vite": "^5.0.0",
+		"vite-plugin-pwa": "^0.17.4",
+		"vite-svg-loader": "^5.1.0"
+	}
 }
