--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
 	"root": true,
-	// env: {
-	// 	node: true
-	// },
+	"env": {
+		"node": true
+	},
 	"extends": [
 		"eslint:recommended",
 		"plugin:vue/vue3-recommended",
