--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"pinia": "^2.1.7",
